# agentic-ai-influencer-factory

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
.mcp/: mcp.json
docs/: architecture_strategy.md  containerization.md  contributions.md  roadmap.md
docs/adr/: db_selection.md  security_model.md
research/: research_notes.md  tooling _stategy.md
skills/agent_rules/: agent_rules.py
skills/skill_content_generator/: README.md
skills/skill_publisher_content/: README.md
skills/skill_trend_fetcher/: README.md  trend_fetcher.py
specs/: _meta.md  acceptance_criteria.md  db_management.md  frontend.md  functional.md  openclaw_integration.md  security.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
