[project]
name = "agentic_ai"
version = "0.1.0"
description = "Project Chimera: Autonomous AI Influencer prototype repository for Task 1 setup and architecture research."
authors = [
    { name="Dereje Derib", email="derejederib@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.dependency-groups]
default = [
    "numpy",
    "pandas",
    "matplotlib",
    "plotly"
]
dev = [
    "jupyter",
    "pytest"
]

[build-system]
requires = ["setuptools>=65.5.0", "uv>=0.9.29"]
build-backend = "setuptools.build_meta"
